--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,14 +1,19 @@
-environment: dev
+environment: local
 
 port: 8080
 
 service-name:
   binance-future: BNF
   binance-spot: BNS
+  okx-future: OKXF
+  okx-spot: OKXS
 
 secrets:
   binance-apikey:
   binance-secretKey:
+  okx-apiKey:
+  okx-secretKey:
+  okx-passPhase:
 
 binance-future-url:
   set-leverage: /fapi/v1/leverage
@@ -20,4 +25,11 @@ binance-future-url:
     # binance3:
     # binance4:
 
+okx-future-url:
+  set-leverage: /api/v5/account/set-leverage
+  place-position: /api/v5/trade/order
+  multi-position: /api/v5/trade/batch-orders
+  okx-future-baseUrl:
+    okx1: https://www.okx.com
 
+okx-spot-url:
