--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,22 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        // {
+        //     "name": "debug project within container",
+        //     "type": "go",
+        //     "request": "attach",
+        //     "mode":"remote",
+        //     "port": 4000,
+        //     "host":"127.0.0.1"
+        // },
         {
-            "name": "Launch Package",
+            "name": "debug go project version1.21",
             "type": "go",
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceRoot}/cmd/myapp/main.go",
-            "cwd": "${workspaceFolder}"
+            "cwd": "${workspaceFolder}",
+            "dlvFlags": ["--check-go-version=false"]
         }
     ]
 }
